<resources>
    <string name="app_name">My Local Banks</string>
    <string name="dbs">DBS</string>
    <string name="ocbc">OCBC</string>
    <string name="uob">UOB</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="dbsNo">18001111111</string>
    <string name="toggle_favourite">Toggle Favourite</string>
    <string name="contact_the_bank">Contact the bank</string>
    <string name="website">Website</string>
    <string name="dbsNum">18001111111</string>
    <string name="ocbcNum">18003633333</string>
    <string name="uobNum">18002222121</string>
    <string name="advisory"><b>Please long press on the bank names to access the menu options.</b></string>
</resources>