<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="@drawable/rounded_edges">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/dbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rochaline_regular"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/dbs"
                    android:textColor="#FFFFFF"
                    android:textSize="65sp" />

                <ImageView
                    android:id="@+id/imageViewDBS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    app:srcCompat="@drawable/chip" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/rochaline_regular"
                    android:text="@string/dbsNum"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/dbs_logo"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:layout_gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="@drawable/rounded_edges_red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ocbc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rochaline_regular"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/ocbc"
                    android:textColor="#FFFFFF"
                    android:textSize="65sp" />

                <ImageView
                    android:id="@+id/imageViewOCBC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    app:srcCompat="@drawable/chip" />

                <TextView
                    android:id="@+id/textViewOCBCnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/rochaline_regular"
                    android:text="@string/ocbcNum"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ocbc_logo"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:background="@drawable/rounded_edges_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rochaline_regular"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/uob"
                    android:textColor="#FFFFFF"
                    android:textSize="65sp" />

                <ImageView
                    android:id="@+id/imageViewUOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    app:srcCompat="@drawable/chip" />

                <TextView
                    android:id="@+id/textViewUOBnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/rochaline_regular"
                    android:text="@string/uobNum"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/uob_logo"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:maxHeight="100dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>